bug-#39524: Modish 2.1: UI Issue; All integrations; Mapping screen;Footer is overlapped on screen

--- a/app/src/pages/settings/styles/manageIntegrations.scss
+++ b/app/src/pages/settings/styles/manageIntegrations.scss
@@ -48,7 +48,7 @@ height: 2.5rem !important;
 }
 .logout__btn{
     position: absolute !important;
-    left: 55rem !important;
+    left: 53rem !important;
     background: white !important;
     color: blue !important;
     .p-button{
